# neural-machine-translation-by-jointly-learning-to-align-and-translate

./: construct_dict.py  main.py  news-commentary-corpus.en.json  news-commentary-corpus.ja.json  news-commentary-corpus.tsv  pyproject.toml  utils.py  wordembedding.py
reference_impl/: convert_news_corpus.py  reference.py
reference_impl/data/: en-ja.txt
